# Renderer

./: .gitignore  CMakeLists.txt  README.md  RenderEngine.cpp  RenderEngine.h  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  draw.py  draw_spp.py  hittable.h  hittable_list.h  image.ppm  main.cpp  mainwindow.cpp  mainwindow.h  makefile  material.h  moving_sphere.h  pdf.h  perlin.h  pi.cpp  ray.h  render.cpp  rtw_stb_image.h  rtweekend.h  run.bat  run_img.bat  run_omp.bat  run_pmp.bat  sphere.h  test.cpp  texture.h  vec3.h
common/: aabb.h  camera.h  color.h  perlin.h  ray.h  rtw_stb_image.h  rtweekend.h  texture.h  vec3.h
example/: example.cpp  makefile  run.bat
img/: image_cornell.ppm
include/: RayTracer.h  RenderEngine.h  aabb.h  aarect.h  box.h  bvh.h  constant_medium.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  onb.h  pdf.h  scene.h  sphere.h  texture copy.h
include/common/: aabb.h  color.h  common.h  material.h  model.h  onb.h  ray.h  rtw_stb_image.h  texture.h  vec2.h  vec3.h
include/shapes/: aarect.h  box.h  bvh.h  constant_medium.h  empty.h  hittable.h  hittable_list.h  mesh_triangle.h  moving_sphere.h  participate_medium.h  sphere.h  triangle.h
output/: draw_spp.py  draw_time.py  spp_test.cpp
output/compare/: timing_results_BVH.csv  timing_results_Both.csv  timing_results_OpenMP.csv
output/cornell_box/: timing_results.csv
output/mirror/: timing_results.csv
output/objects/: timing_results.csv
src/: RayTracer.cpp  RenderEngine.cpp  aabb.cpp  aarect.cpp  box.cpp  bvh.cpp  constant_medium.cpp  hittable.cpp  hittable_list.cpp  mesh_triangle.cpp  model.cpp  moving_sphere.cpp  participate_medium.cpp  scene.cpp  sphere.cpp  triangle.cpp
